@@ -14,7 +14,6 @@ import java.io.PrintStream;
 import java.io.Writer;
 import java.nio.charset.Charset;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -71,7 +70,7 @@ public class UndefinedFunctionCollectorAlgorithm
 
   @Option(secure = true, description = "export undefined functions as C file")
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path stubsFile = Paths.get("stubs.c");
+  private Path stubsFile = Path.of("stubs.c");
 
   @Option(secure = true, description = "Set of functions that should be ignored")
   private Set<String> allowedFunctions =
@@ -279,15 +278,7 @@ public class UndefinedFunctionCollectorAlgorithm
       buf.append(indent + "// Composite type\n");
       prepend.append(odmFunctionDecl);
       // We can not use rt.toASTString(), as it produces full definition with all fields
-      buf.append(
-          indent
-              + rt.toString()
-              + " *tmp"
-              + " = ("
-              + rt.toString()
-              + "*)"
-              + externAllocFunction
-              + "();\n");
+      buf.append(indent + rt + " *tmp" + " = (" + rt + "*)" + externAllocFunction + "();\n");
       prepend.append(ASSUME_FUNCTION_DECL);
       buf.append(indent + ASSUME_FUNCTION_NAME + "(tmp != 0);\n");
       buf.append(indent + "return *tmp;\n");
